Issue #24824: Signatures of codecs.encode() and codecs.decode() now are compatible with pydoc.